--- a/situs-toto-togel-buntogel.html
+++ b/situs-toto-togel-buntogel.html
@@ -12,6 +12,7 @@
         <meta name="robots" content="index, follow" />
         <link rel="canonical" href="https://tryingtobest.github.io/buntogel/situs-toto-togel-buntogel.html">
         <link rel="amphtml" href="https://buns.pages.dev/" />
+        <meta name="google-site-verification" content="DFiW5q4yvZ3WK42GOol2QE84Ib55rAmk0srvI6aXdE0" />
         <meta name="author" content="BUNTOGEL" />
         <meta name="publisher" content="BUNTOGEL" />
         <meta name="categories" content="website">
